edit db connection

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT = 3000
-DB_STRING = mongodb://mohye:mohye@ac-dfkanpb-shard-00-00.ukajrtn.mongodb.net:27017,ac-dfkanpb-shard-00-01.ukajrtn.mongodb.net:27017,ac-dfkanpb-shard-00-02.ukajrtn.mongodb.net:27017/test?replicaSet=atlas-60wkyw-shard-0&ssl=true&authSource=admin
+DB_STRING_CLOUD = mongodb://mohye:mohye@ac-dfkanpb-shard-00-00.ukajrtn.mongodb.net:27017,ac-dfkanpb-shard-00-01.ukajrtn.mongodb.net:27017,ac-dfkanpb-shard-00-02.ukajrtn.mongodb.net:27017/test?replicaSet=atlas-60wkyw-shard-0&ssl=true&authSource=admin
+DB_STRING_LOCAL = mongodb://127.0.0.1:27017/graphql
+
+
